--- a/lilie/frontend/package.json
+++ b/lilie/frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@uiw/codemirror-extensions-classname": "^4.19.11",
+    "@uiw/codemirror-extensions-langs": "^4.19.11",
+    "@uiw/react-codemirror": "^4.19.11",
     "antd": "^5.3.3",
     "axios": "^1.3.4",
     "react": "^18.2.0",
