--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ __init__.py
 db.sqlite3
 media
 my_lilie
+models
+uploads
+project_scann
 
 # Environments 
 .env 
@@ -26,3 +29,26 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
