--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pbr==5.11.1
 psycopg2-binary==2.9.6
 Pygments==2.15.1
 python-dotenv==1.0.0
+python-owasp-zap-v2.4==0.0.21
 pytz==2023.3
 PyYAML==6.0
 rich==13.3.5
