--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/codemirror": "^5.60.8",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@uiw/codemirror-themes": "^4.21.8",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
     "react": "^18.2.0",
@@ -45,6 +47,13 @@
     ]
   },
   "devDependencies": {
-    "@types/react-syntax-highlighter": "^15.5.7"
+    "@codemirror/basic-setup": "^0.20.0",
+    "@types/prismjs": "^1.26.0",
+    "@types/react-resizable": "^3.0.4",
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "@uiw/codemirror-extensions-classname": "^4.21.8",
+    "@uiw/codemirror-extensions-langs": "^4.21.8",
+    "@uiw/codemirror-theme-okaidia": "^4.21.8",
+    "@uiw/react-codemirror": "^4.21.8"
   }
 }
