--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
-asgiref==3.7.1
+asgiref==3.7.2
 bandit==1.7.5
-Django==4.2.1
-django-cors-headers==4.0.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+Django==4.2.4
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 gitdb==4.0.10
-GitPython==3.1.31
+GitPython==3.1.32
+idna==3.4
 install==1.3.5
-markdown-it-py==2.2.0
+markdown-it-py==3.0.0
 mdurl==0.1.2
 pbr==5.11.1
 psycopg2-binary==2.9.6
 Pygments==2.15.1
 python-dotenv==1.0.0
-python-owasp-zap-v2.4==0.0.21
+python-owasp-zap-v2.4==0.0.22
 pytz==2023.3
-PyYAML==6.0
-rich==13.3.5
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.5.2
+six==1.16.0
 smmap==5.0.0
 sqlparse==0.4.4
 stevedore==5.1.0
-subprocess.run==0.0.8
+tqdm==4.65.0
+typing_extensions==4.7.1
+urllib3==2.0.4
