--- a/env_config_lilie.env
+++ b/env_config_lilie.env
@@ -10,3 +10,4 @@ export ZAP_HOST = localhost
 
 export DJANGO_SECRET_KEY = <SECRET_KEY>
 export DJANGO_DEBUG = True
+export DJANGO_ALLOWED_HOSTS = <ALLOWED_HOSTS>
