--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: Install dependencies
-      run: npm ci
+      run: |
+        cd frontend
+        npm ci
