Backend plus ZAP

--- a/env_config_lilie.env
+++ b/env_config_lilie.env
@@ -1,8 +1,8 @@
-export DB_NAME = stiefmutterchen
-export DB_USER = admin
-export DB_PASS = root
-export DB_HOST = localhost
-export DB_PORT = 5432
+export POSTGRES_DB = stiefmutterchen
+export POSTGRES_USER = admin
+export POSTGRES_PASSWORD = root
+export POSTGRES_HOST = localhost
+export POSTGRES_PORT = 5432
 
 export ZAP_KEY = <ZAP_KEY>
 export ZAP_PORT = 8080
