--- a/lilie/docker-compose.yml
+++ b/lilie/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.5"
 services:
-  lilie-backend-app:
+  app-lilie-backend:
     build: .
     container_name: lun903-lilie-backend
     ports:
@@ -8,6 +8,7 @@ services:
     restart: unless-stopped
     depends_on:
       - app-db
+      - app-owasp-zap-backend
     networks:
       - localnet
   app-db:
@@ -17,12 +18,27 @@ services:
     container_name: lun903-db
     ports:
       - 5432:5432
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASS}
-      - POSTGRES_DB=${DB_NAME}
     volumes:
       - ../scripts:/docker-entrypoint-initdb.d
+    restart: unless-stopped
+    networks:
+      - localnet
+  app-owasp-zap-backend:
+    env_file:
+      - .env
+    image: owasp/zap2docker-stable:latest
+    container_name: lun903-zap
+    depends_on:
+      - app-db
+    user: zap 
+    ports:
+      - 8080:8080
+    
+    ## webswing
+    ## command: zap-webswing.sh
+
+    ## headless
+    command: zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=120 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true
     restart: unless-stopped
     networks:
       - localnet
