--- a/env_config_lilie.env
+++ b/env_config_lilie.env
@@ -1,4 +1,4 @@
-export POSTGRES_DB = stiefmutterchen
+export POSTGRES_DB = lun903
 export POSTGRES_USER = admin
 export POSTGRES_PASSWORD = root
 export POSTGRES_HOST = localhost
