--- a/docker/Dockerfile-frontend
+++ b/docker/Dockerfile-frontend
@@ -1,7 +1,6 @@
 FROM node:14
 WORKDIR /usr/src/app
-COPY package*.json ./
+COPY ./frontend /usr/src/app
 RUN npm install
-COPY . .
 EXPOSE 3000
 CMD ["npm", "start"]
