--- a/docker/docker-compose-databaseup.yml
+++ b/docker/docker-compose-databaseup.yml
@@ -8,5 +8,5 @@ services:
     ports:
      - 5432:5432
     volumes:
-      - ../scripts:/docker-entrypoint-initdb.d
+      - ../scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
