--- a/docker/docker-compose-owaspzap-database.yml
+++ b/docker/docker-compose-owaspzap-database.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ../scripts:/docker-entrypoint-initdb.d
+      - ../scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     restart: unless-stopped
   app-owasp-zap-backend:
     env_file:
