--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "@uiw/codemirror-themes": "^4.21.8",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
