--- a/env_config_lilie.env
+++ b/env_config_lilie.env
@@ -1,13 +1,9 @@
-export POSTGRES_DB = lun903
-export POSTGRES_USER = admin
-export POSTGRES_PASSWORD = root
-export POSTGRES_HOST = localhost
-export POSTGRES_PORT = 5432
-
-export ZAP_KEY = <ZAP_KEY>
-export ZAP_PORT = 8080
-export ZAP_HOST = localhost
-
-export DJANGO_SECRET_KEY = <SECRET_KEY>
-export DJANGO_DEBUG = True
-export DJANGO_ALLOWED_HOSTS = <ALLOWED_HOSTS>
+POSTGRES_DB=lun903
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=root
+POSTGRES_HOST=lun903-db
+POSTGRES_PORT=5432
+ZAP_PORT=8080
+ZAP_HOST=localhost
+DJANGO_SECRET_KEY="keykeykey"
+DJANGO_DEBUG=True
