--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,13 +10,13 @@ services:
     restart: unless-stopped
     depends_on:
       - app-db
-      - app-owasp-zap-backend
     networks:
       - localnet
   app-frontend:
     build:
       context: ..
       dockerfile: ./docker/Dockerfile-frontend
+    container_name: lun903-frontend
     ports:
       - 3000:3000
     restart: unless-stopped
@@ -33,25 +33,6 @@ services:
       - 5432:5432
     volumes:
       - ../scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
-    restart: unless-stopped
-    networks:
-      - localnet
-  app-owasp-zap-backend:
-    env_file:
-      - ../lilie/.env
-    image: owasp/zap2docker-stable:latest
-    container_name: lun903-zap
-    depends_on:
-      - app-db
-    user: zap 
-    ports:
-      - 8080:8080
-    
-    ## webswing
-    ## command: zap-webswing.sh
-
-    ## headless
-    command: zap.sh -daemon -host 0.0.0.0 -port 8080 -config api.disablekey=true -config database.recoverylog=false -config connection.timeoutInSecs=120 -config api.addrs.addr.name=.* -config api.addrs.addr.regex=true
     restart: unless-stopped
     networks:
       - localnet
