--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tonconnect/ui-react": "^2.0.0-beta.4",
     "@types/codemirror": "^5.60.8",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.36",
