configuration and launch

--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ my_lilie
 models
 migrations
 uploads
-project_scann
+project_scan
 lun903_python
 
 # Environments 
-.env 
+.env
 .venv 
 env/ 
 venv/ 
