--- a/lilie/requirements.txt
+++ b/lilie/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.2.0
 Django==4.2.4
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+docker==6.1.3
 gitdb==4.0.10
 GitPython==3.1.32
 idna==3.4
