--- a/docker/Dockerfile-frontend
+++ b/docker/Dockerfile-frontend
@@ -1,6 +1,10 @@
-FROM node:14
+FROM node:14 as build-stage
 WORKDIR /usr/src/app
 COPY ./frontend /usr/src/app
 RUN npm install
-EXPOSE 3000
-CMD ["npm", "start"]
+RUN npm run build
+FROM nginx:stable-alpine as production-stage
+COPY --from=build-stage /usr/src/app/build /usr/share/nginx/html
+COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
