--- a/lilie/requirements.txt
+++ b/lilie/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.7.2
 bandit==1.7.5
 certifi==2023.7.22
 charset-normalizer==3.2.0
+celery[redis]==5.3.4
 Django==4.2.4
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+flower==2.0.1
 docker==6.1.3
 gitdb==4.0.10
 GitPython==3.1.32
