--- a/docker/docker-compose-dev-old.yml
+++ b/docker/docker-compose-dev-old.yml
@@ -40,6 +40,15 @@ services:
     networks:
       - localnet
 
+  dependency-track:
+    image: owasp/dependency-track:latest@sha256:efc65e702ee1691bd9e04bf30a89cae0ee12ec77e9601e9e46b2bcc625e60c0a
+    ports:
+      - "11488:8080"
+    deploy:
+      resources:
+        limits:
+          memory: 8G
+
 volumes:
   shared-data:
     driver: local
