--- a/lilie/.env
+++ b/lilie/.env
@@ -1,7 +1,7 @@
 POSTGRES_DB=lun903
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=root
-POSTGRES_HOST=localhost
+POSTGRES_HOST=lun903-db
 POSTGRES_PORT=5432
 DJANGO_SECRET_KEY="django-insecure-dr^8*ia#5n4g+x4ox!+3$w6)h+md7y6g*k3+2fqobw0k_9t@#("
 DJANGO_DEBUG=True
